syntax = "proto3";

option csharp_namespace = "gPRCService";

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetCustomers (NewCustomersRequest) returns (stream CustomerModel);
}

message NewCustomersRequest{

}

message CustomerLookupModel{
	int32 userId = 1;
}

message CustomerModel{
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}